--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,8 +13,14 @@ jobs:
   tests:
     runs-on: ubuntu-latest
     steps:
-      -
-        run: echo "No tests yet"
+      - uses: actions/checkout@v2
+      - name: Python Linter
+        uses: sunnysid3up/python-linter@master
+        with:
+          source: "src"
+          mypy-options: "--ignore-missing-imports --show-error-codes"
+          isort-options: "-w 100"
+
         
   docker:
     runs-on: ubuntu-latest
