--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Python Linter
         uses: sunnysid3up/python-linter@master
         with:
-          source: "tg-chess-bot"
+          source: "./"
           mypy-options: "--ignore-missing-imports --show-error-codes"
           isort-options: "-w 100"
 
