--- a/.pylintrc
+++ b/.pylintrc
@@ -2,4 +2,5 @@
 disable=
     import-error,
     missing-module-docstring,
-    missing-function-docstring
+    missing-function-docstring,
+    missing-class-docstring
