--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,6 +12,7 @@ jobs:
 
   tests:
     runs-on: ubuntu-latest
+    steps:
     - uses: actions/checkout@v2
     - name: Set up Python 3.10.6
     uses: actions/setup-python@v1
