--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,57 +4,45 @@ name: CI
 on:
   # Triggers the workflow on push or pull request events but only for the "main" branch
   push:
-    branches: [ "main" ]
+    branches: ["main"]
   pull_request:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-
   tests:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-    - name: Set up Python 3.10.11
-      uses: actions/setup-python@v1
-      with:
-        python-version: 3.10.11
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install pylint
-    - name: Analysing the code with pylint
-      run: |
-        find . -name '*.py' -exec pylint --fail-under=8 {} \;
+      - uses: actions/checkout@v2
+      - name: Set up Python 3.10.11
+        uses: actions/setup-python@v1
+        with:
+          python-version: 3.10.11
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install pylint
+      - name: Analysing the code with pylint
+        run: |
+          find . -name '*.py' -exec pylint --fail-under=8 {} \;
 
-        
   docker:
     runs-on: ubuntu-latest
     steps:
-      -
-        name: Set up QEMU
+      - name: Set up QEMU
         uses: docker/setup-qemu-action@v2
-      -
-        name: Set up Docker Buildx
+      - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
-      -
-        name: Login to Docker Hub
+      - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-      -
-        name: Decode creds
-        run: echo ${{secrets.CREDS_ENCODED}} | base64 --decode > creds.json
-      -
-        name: Decode env
-        run: echo ${{secrets.ENV_ENCODED}} | base64 --decode > .env
-      -
-        name: Build and push
+      - name: Decode creds
+        run: echo ${{ secrets.CREDS_ENCODED }} | base64 --decode > creds.json
+      - name: Decode env
+        run: echo ${{ secrets.ENV_ENCODED }} | base64 --decode > .env
+      - name: Build and push
         uses: docker/build-push-action@v4
         with:
           push: true
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/tgbot:latest
-
-        
-          
-  
