--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,9 +38,17 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
       - name: Decode creds
-        run: echo ${{ secrets.CREDS_ENCODED }} | base64 --decode > creds.json
+        env:
+          CREDS_ENCODED: ${{ secrets.CREDS_ENCODED }}
+        run: |
+          echo $CREDS_ENCODED | base64 --decode > creds.json
+          echo $CREDS_ENCODED
       - name: Decode env
-        run: echo ${{ secrets.ENV_ENCODED }} | base64 --decode > .env
+        env:
+          ENV_ENCODED: ${{ secrets.ENV_ENCODED }}
+        run: |
+          echo $ENV_ENCODED | base64 --decode > .env
+          echo $ENV_ENCODED
       - name: Build and push
         uses: docker/build-push-action@v4
         with:
